# g474re_nucleo_ral

./: Cargo.toml  Embed.toml  README.md  STM32G474xx.svd  memory.x
.cargo/: config
src/: gpio.rs  lib.rs  main.rs  nvic.rs
