[package]
name = "g474re_nucleo_ral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
panic-halt = "0.2.0"
stm32ral = { version = "0.8.0", features = ["stm32g474", "rt"] }
