[package]
name = "g474re_nucleo_ral"
version = "0.1.0"
edition = "2021"

[lib]
file = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
panic-halt = "0.2.0"
stm32ral = { version = "0.8.0", features = ["stm32g474", "rt"] }
defmt-rtt = "0.4.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
defmt = "0.3.5"

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false

[profile.release]
opt-level = 'z'
debug = false
codegen-units = 1
incremental = false
lto = true